finished profile activity page layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">InstagramClone</string>
+    <string name="username">uri.frischman</string>
+
+    <!--Snippet: Top Profile-->
+    <string name="posts">Posts</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="edit_your_profile">Edit your profile</string>
 </resources>
